--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,3 +1,6 @@
+include MANIFEST.in
+include *.rst
 recursive-include cioppino *
 recursive-include docs *
-global-exclude *pyc
+global-exclude *pyc .gitignore
+prune dist
