--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,16 @@
 *.pyc
 cioppino.twothumbs.egg-info
 dist
+.installed.cfg
+.mr.developer.cfg
+bin
+develop-eggs
+eggs
+lib
+parts
+packages
+src
+var
+downloads
+*.bak
 *.mo
