--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,18 @@
-*.pyc
-cioppino.twothumbs.egg-info
-dist
-.installed.cfg
-.mr.developer.cfg
-bin
-develop-eggs
-eggs
-lib
-parts
-packages
-src
-var
-downloads
 *.bak
 *.mo
+*.pyc
+.installed.cfg
+.mr.developer.cfg
+/bin/
+/develop-eggs/
+/dist/
+/downloads/
+/eggs/
+/include/
+/lib/
+/local/
+/packages/
+/parts/
+/src/
+/var/
+cioppino.twothumbs.egg-info
