--- a/base.cfg
+++ b/base.cfg
@@ -8,3 +8,7 @@ parts+=
 
 [code-analysis]
 directory=cioppino
+
+[versions]
+# pinned because 1.4.1 and above require coverage >= 3.7
+createcoverage = 1.4
