--- a/travis.cfg
+++ b/travis.cfg
@@ -1,5 +1,6 @@
 [buildout]
 extends =
-    https://raw.githubusercontent.com/collective/buildout.plonetest/master/travis-5.1.x.cfg
+    plone-x.x.x.cfg
     https://raw.githubusercontent.com/collective/buildout.plonetest/master/qa.cfg
     base.cfg
+find-links += http://dist.plone.org/thirdparty/
