--- a/travis.cfg
+++ b/travis.cfg
@@ -4,3 +4,8 @@ extends =
     plone-x.x.x.cfg
     https://raw.githubusercontent.com/collective/buildout.plonetest/master/qa.cfg
 find-links += http://dist.plone.org/thirdparty/
+
+[code-analysis]
+recipe = plone.recipe.codeanalysis
+pre-commit-hook = False
+return-status-codes = True
