sript section covered only with code-analysis run.

--- a/.travis.yml
+++ b/.travis.yml
@@ -39,7 +39,9 @@ install:
 before_script:
   - export DISPLAY=:99.0
   - sh -e /etc/init.d/xvfb start
-script: bin/test && bin/code-analysis
+script:
+  - bin/code-analysis
+
 after_success:
   - bin/coverage.sh
   - pip install coveralls
