Add bin/test to the script section.

--- a/.travis.yml
+++ b/.travis.yml
@@ -41,6 +41,7 @@ before_script:
   - sh -e /etc/init.d/xvfb start
 script:
   - bin/code-analysis
+  - bin/test
 
 after_success:
   - bin/coverage.sh
