--- a/base.cfg
+++ b/base.cfg
@@ -9,6 +9,11 @@ parts+=
 [code-analysis]
 directory=cioppino
 
+[test]
+recipe = zc.recipe.testrunner
+eggs = ${instance:eggs}
+defaults = ['-s', 'cioppino.twothumbs', '--auto-color', '--auto-progress']
+
 [versions]
 # pinned because 1.4.1 and above require coverage >= 3.7
 createcoverage = 1.4
