--- a/base.cfg
+++ b/base.cfg
@@ -2,10 +2,21 @@
 package-name = cioppino.twothumbs
 package-extras = [test]
 parts+=
+    instance
     createcoverage
     coverage-sh
     code-analysis
     test
+
+
+[instance]
+recipe = plone.recipe.zope2instance
+user = admin:admin
+http-address = 8080
+eggs =
+    Plone
+    Pillow
+    cioppino.twothumbs [test]
 
 [code-analysis]
 directory=cioppino
