Add travis entries and configs for Plone 4.3 and 5.0.

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,10 @@ cache:
 matrix:
   include:
   - python: "2.7"
+    env: PLONE_VERSION=4.3.x
+  - python: "2.7"
+    env: PLONE_VERSION=5.0.x
+  - python: "2.7"
     env: PLONE_VERSION=5.1.x
   - python: "2.7"
     env: PLONE_VERSION=5.2.x
