--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -4,3 +4,7 @@ recursive-include cioppino *
 recursive-include docs *
 global-exclude *pyc .gitignore
 prune dist
+exclude *.cfg
+exclude .coveragerc
+exclude requirements.txt
+exclude bootstrap.py
