Use the new added test_plone-5.2.x.cfg file for buildout and add releaser part to the base.cfg

--- a/base.cfg
+++ b/base.cfg
@@ -6,6 +6,7 @@ parts+=
     createcoverage
     coverage-sh
     code-analysis
+    releaser
     test
 develop = .
 
@@ -25,6 +26,11 @@ directory=cioppino
 recipe = zc.recipe.testrunner
 eggs = ${instance:eggs}
 defaults = ['-s', 'cioppino.twothumbs', '--auto-color', '--auto-progress']
+
+
+[releaser]
+recipe = zc.recipe.egg
+eggs = zest.releaser
 
 [versions]
 # pinned because 1.4.1 and above require coverage >= 3.7
