--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,5 +1,3 @@
 [buildout]
 extends =
-    https://raw.github.com/collective/buildout.plonetest/master/test-4.x.cfg
-    https://raw.github.com/collective/buildout.plonetest/master/qa.cfg
-    base.cfg
+    test_plone-5.2.x.cfg
