Improve buildout scripts and use a Plone release, the version 5.2 latest currently.

--- a/base.cfg
+++ b/base.cfg
@@ -1,10 +1,12 @@
 [buildout]
 package-name = cioppino.twothumbs
+show-picked-versions = true
+extensions =
+    mr.developer
 package-extras = [test]
 parts+=
     instance
     createcoverage
-    coverage-sh
     code-analysis
     releaser
     test
@@ -19,8 +21,15 @@ eggs =
     Pillow
     cioppino.twothumbs [test]
 
+
+[createcoverage]
+recipe = zc.recipe.egg
+eggs = createcoverage
+
 [code-analysis]
+recipe = plone.recipe.codeanalysis[recommended]
 directory=cioppino
+return-status-codes = False
 
 [test]
 recipe = zc.recipe.testrunner
