--- a/plone-5.2.x.cfg
+++ b/plone-5.2.x.cfg
@@ -1,4 +1,5 @@
 [buildout]
 extends =
-    http://dist.plone.org/release/5.2a1/versions.cfg
-#    https://raw.githubusercontent.com/collective/buildout.plonetest/master/travis-5.2.x.cfg
+    https://dist.plone.org/release/5.2-latest/versions.cfg
+    base.cfg
+find-links += https://dist.plone.org/thirdparty/
