--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -7,7 +7,7 @@ jobs:
       fail-fast: false
       matrix:
         python-version: [3.9, 3.8, 3.7, 3.6]
-        plone-version: ["5.2"]
+        plone-version: ["5.2", "6.0"]
 
     steps:
       # git checkout
