Add versions section.

--- a/plone-6.0.x.cfg
+++ b/plone-6.0.x.cfg
@@ -3,3 +3,8 @@ extends =
     https://dist.plone.org/release/6.0.0a3/versions.cfg
     base.cfg
 find-links = https://dist.plone.org/release/6.0.0a3/
+versions=versions
+
+[versions]
+# Error: The requirement ('importlib-metadata<4.3') is not allowed by your [versions] constraint (4.5.0)
+importlib-metadata = 4.2.0
