--- a/plone-6.0.x.cfg
+++ b/plone-6.0.x.cfg
@@ -2,7 +2,7 @@
 extends =
     https://dist.plone.org/release/6.0.0a4/versions.cfg
     base.cfg
-find-links = https://dist.plone.org/release/6.0.0a4/
+find-links += https://dist.plone.org/thirdparty/
 versions=versions
 
 [versions]
