--- a/plone-6.0.x.cfg
+++ b/plone-6.0.x.cfg
@@ -1,8 +1,8 @@
 [buildout]
 extends =
-    https://dist.plone.org/release/6.0.0a4/versions.cfg
+    https://dist.plone.org/release/6.0.0a3/versions.cfg
     base.cfg
-find-links += https://dist.plone.org/thirdparty/
+find-links = https://dist.plone.org/release/6.0.0a3/
 versions=versions
 
 [versions]
