--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -6,8 +6,13 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python-version: [3.9, 3.8, 3.7, 3.6]
+        python-version: ["3.9", "3.8", "3.7", "3.6"]
         plone-version: ["5.2", "6.0"]
+        exclude:
+          - python-version: "3.9"
+            plone-version: "5.2"
+          - python-version: "3.6"
+            plone-version: "6.0"
 
     steps:
       # git checkout
