Add tox.ini for local testing.
Pin setuptools and zc.buildout to the same versions in all environments.
This avoids buildout upgrading and restarting itself, which gives an error in tox because the buildout config is no longer found.
I tried using zc.buildout 3 and latest setuptools, but latest setuptools is not installable on Python 3.6.
So stick to zc.buildout 2 for the moment.
We could also pin different versions for Python 3.6 only: that works in both requirements.txt and in buildout configs.

--- a/base.cfg
+++ b/base.cfg
@@ -44,3 +44,7 @@ eggs = zest.releaser
 [versions]
 # pinned because 1.4.1 and above require coverage >= 3.7
 createcoverage = 1.4
+
+# Keep this in sync with requirements.txt please.
+setuptools = 42.0.2
+zc.buildout = 2.13.7
