--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,5 @@
--c constraints_plone52.txt
-setuptools
-zc.buildout
+# Keep this in sync with base.cfg please.
+# We use the same versions on Plone 5.2 and 6.0.
+# If one Plone version uses a different package, then buildout may restart, giving problems.
+setuptools==42.0.2
+zc.buildout==2.13.7
