--- a/plone-5.2.x.cfg
+++ b/plone-5.2.x.cfg
@@ -3,3 +3,11 @@ extends =
     https://dist.plone.org/release/5.2-latest/versions.cfg
     base.cfg
 find-links += https://dist.plone.org/thirdparty/
+
+[versions:python36]
+# Error: The requirement ('importlib-metadata<4.3,>=1.1.0') is not allowed by your [versions] constraint (0.23)
+importlib-metadata = 2.0.0
+
+[versions:python37]
+# Error: The requirement ('importlib-metadata<4.3,>=1.1.0') is not allowed by your [versions] constraint (0.23)
+importlib-metadata = 2.0.0
