--- a/.isort.cfg
+++ b/.isort.cfg
@@ -1,5 +1,5 @@
-[settings]
+[isort]
+profile = black
 force_alphabetical_sort = True
 force_single_line = True
 lines_after_imports = 2
-line_length = 200
